<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.pln.decki.sijali.SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <com.pln.decki.sijali.customfont.KOActivista
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/daftar"
            android:textSize="46sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:gravity="center" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <com.pln.decki.sijali.customfont.KOActivista
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/datadiri"
            android:textStyle="bold"
            android:textSize="32sp"
            android:textColor="@color/black"/>
        <com.pln.decki.sijali.customfont.HelloBasic
            android:id="@+id/namalengkap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namalengkap"
            android:textSize="@dimen/signup_edittext_size"
            android:inputType="text"/>
        <com.pln.decki.sijali.customfont.HelloBasic
            android:id="@+id/namapanggilan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/namapanggilan"
            android:textSize="@dimen/signup_edittext_size"
            android:inputType="text"/>
        <com.pln.decki.sijali.customfont.HelloBasic
            android:id="@+id/nip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nip"
            android:textSize="@dimen/signup_edittext_size"
            android:inputType="text"/>
        <Spinner
            android:id="@+id/jabatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/jabatan"/>
        <Spinner
            android:id="@+id/supervisorgi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/supervisorgi"/>
        <com.pln.decki.sijali.customfont.HelloBasic
            android:id="@+id/nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nohp"
            android:textSize="@dimen/signup_edittext_size"
            android:inputType="text"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp">
        <com.pln.decki.sijali.customfont.KOActivista
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dataakun"
            android:textSize="32sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <com.pln.decki.sijali.customfont.HelloBasic
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textSize="@dimen/signup_edittext_size"
            android:inputType="text"/>
        <com.pln.decki.sijali.customfont.HelloBasic
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="@dimen/signup_edittext_size"
            android:inputType="textPassword" />
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/daftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Daftar"
            android:layout_alignParentRight="true"
            android:background="@drawable/kanan_merah" />
    </RelativeLayout>

</LinearLayout>
