<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.pln.decki.sijali.LoginActivity"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:maxWidth="200dp"
                android:maxHeight="200dp"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/login" />
            <com.pln.decki.sijali.customfont.KOActivista
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                android:textSize="42sp"
                android:textColor="@color/black"/>
            <com.pln.decki.sijali.customfont.HelloBasicTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="SISTEM INFORMASI"
                android:gravity="center"
                android:textSize="18sp"/>
            <com.pln.decki.sijali.customfont.HelloBasicTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="JADWAL PEMELIHARAAN"
                android:gravity="center"
                android:textSize="18sp"
                android:layout_marginBottom="32dp"/>
            <com.pln.decki.sijali.customfont.KOActivista
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/basecamp_semarang"
                android:textSize="32sp"
                android:textColor="@color/black" />
            <com.pln.decki.sijali.customfont.HelloBasic
                android:inputType="text"
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:hint="@string/username"
                android:textSize="24sp" />
            <com.pln.decki.sijali.customfont.HelloBasic
                android:inputType="textPassword"
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:paddingLeft="10dp"
                android:hint="@string/password"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.pln.decki.sijali.customfont.HelloBasicButton
                android:id="@+id/signin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="0dp"
                android:background="@drawable/kiri_hijau"
                android:text="@string/signin"/>
            <com.pln.decki.sijali.customfont.HelloBasicButton
                android:id="@+id/signup"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="0dp"
                android:padding="0dp"
                android:background="@drawable/kanan_merah"
                android:text="@string/signup"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
